<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context="sirfireys.rana.noidainternationaluniverstiy.AboutUsActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/text_help_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/help_app"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text_help_app">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/op_exit" />

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:src="@drawable/op_home" />

            <ImageView
                android:id="@+id/img_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_home"
                android:layout_below="@+id/img_home"
                android:src="@drawable/op_refresh" />

            <ImageView
                android:id="@+id/img_abtus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_refresh"
                android:layout_below="@+id/img_refresh"
                android:src="@drawable/op_about" />

            <ImageView
                android:id="@+id/img_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_abtus"
                android:layout_below="@+id/img_abtus"
                android:src="@drawable/op_find" />

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_find"
                android:layout_below="@+id/img_find"
                android:src="@drawable/op_share" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_refresh"
                android:layout_alignLeft="@+id/textView2"
                android:text="@string/icon_des_refresh" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_abtus"
                android:layout_alignLeft="@+id/textView3"
                android:text="@string/icon_des_help" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/img_share"
                android:layout_alignLeft="@+id/textView4"
                android:text="@string/icon_des_find" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_exit"
                android:layout_marginLeft="28dp"
                android:layout_toRightOf="@+id/img_exit"
                android:text="@string/icon_des_exit" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_share"
                android:layout_alignLeft="@+id/textView5"
                android:text="@string/icon_des_share" />

            <ImageView
                android:id="@+id/img_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/img_share"
                android:layout_toLeftOf="@+id/textView2"
                android:src="@drawable/op_news" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView6"
                android:text="@string/icon_des_about_us" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_home"
                android:layout_alignLeft="@+id/textView2"
                android:text="@string/icon_des_home" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>